--- a/style.css
+++ b/style.css
@@ -8,17 +8,17 @@ button {
 p {
   font-family: "Verdana";
   font-size: 20px;
-
-
+  
+  
 }
 
 h1 {
   font-family: "Verdana";
   color: pink;
   font-size: 30px;
-  whidth: 40%;
+  width: 40%;
   height: 40%;
-
+  
 }
 
 * {
